--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "ant-design-vue": "^3.2.10",
     "jsplumb": "^2.15.6",
+    "resizable-dom": "^1.0.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
