--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-vue-app",
+  "name": "vue3-flow-design",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,17 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.10",
     "jsplumb": "^2.15.6",
     "resizable-dom": "^1.0.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "@vitejs/plugin-vue": "^3.0.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-define-config": "^1.1.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "prettier": "^2.4.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.38.4"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": "^12 || >=14"
   }
 }
