fix: 解决语法报错

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
+    "noImplicitAny": false,
     "skipLibCheck": true,
     "types": ["vite/client"],
     "removeComments": true,
