--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.10",
+    "canvg": "^2.0.0",
+    "html2canvas": "^1.4.1",
     "jsplumb": "^2.15.6",
     "resizable-dom": "^1.0.2",
     "vue": "^3.2.37"
