--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "html2canvas": "^1.4.1",
     "jsplumb": "^2.15.6",
     "resizable-dom": "^1.0.2",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue3-json-viewer": "^2.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.0",
