perf: 优化类型定义

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedParameters": true,
     "isolatedModules": true,
     "esModuleInterop": true,
+    "baseUrl": ".",
     "lib": ["ESNext", "DOM"],
     "noImplicitAny": false,
     "skipLibCheck": true,
