perf: 按需注入ICON组件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-flow-design",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
