--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue3-json-viewer": "^2.2.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "@vitejs/plugin-vue": "^3.0.0",
@@ -46,7 +47,7 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-eslint-parser": "^8.0.1",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^1.0.8"
   },
   "license": "MIT",
   "engines": {
